Migrate from Spring 2.7+ to 3.0