@@ -8,7 +8,7 @@ public class NoSuchTenantException extends ClientException {
 	private final String tenantId;
 
 	NoSuchTenantException(final String tenantId) {
-		super(String.format("The tenant with id '%s' does not exist or is not subscribed to Mobile Services", tenantId));
+		super("The tenant with id '%s' does not exist or is not subscribed to Mobile Services".formatted(tenantId));
 		this.tenantId = tenantId;
 	}
 }
